2021-01-23:
The project is started after realizing that very few people are technically skilled enough or willing to go through the inconvenience of being able to type romanized Arabic using systems with diacritics in the Latin script.

Two text areas and two buttons are placed on a webpage.


2021-01-29:
- Fix romanization of "kaan", where alef was not being romanized at all.
- Add ARABIC LETTER ALEF before vowels if no consonant precedes the vowel.
- Add ability to distinguish between 4 hamza characters.
- Fix regression: 'ain was not appearing anymore. Switch to 'e, 
- Do not allow SUKUN to show up in the result of romanization.
- Support interpretation of ARABIC LETTER ALEF at beginning of word as ARABIC LETTER ALEF WASLA
- Handle capital latin letters by first converting them to lowercase before arabization.